JavaFXDemo2 package test